@@ -3,3 +3,4 @@ Add French Translation, by MonsterKillers1973
 Add Turkish Translation, by Sariserpito
 Add Spanish Translation, by franz
 Attempt to resolve items disappearing on servers.
+Refactor all local functions to global functions so that modders can overwrite/patch existing functions.
